--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,18 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "formik": "^2.2.9",
+    "mapbox-gl": "^2.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-map-gl": "^7.0.10",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "recoil": "^0.6.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
