--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "recharts": "^2.0.6",
     "recoil": "^0.6.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typewriter-effect": "^2.18.2",
