--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "mapbox-gl": "^2.7.1",
     "react": "^17.0.2",
+    "react-countup": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-map-gl": "^7.0.10",
